--- a/sass/base/_body-element.sass
+++ b/sass/base/_body-element.sass
@@ -3,6 +3,7 @@ body
   overflow-x: hidden
   max-width: 100vw
   position: relative
+  color: $black
 
 *
   box-sizing: border-box
@@ -28,11 +29,15 @@ body
   max-width: $xl-max-width
   margin: 0 auto
   padding: 0 20px
+  @media(max-width: 800px)
+    padding: 0 35px
 
 .three-col
   display: flex
   flex-wrap: wrap
   justify-content: space-between
+  @media(max-width: 800px)
+    display: block
 
 .three-col-item
   flex-basis: calc(33% - 10px)
@@ -48,3 +53,11 @@ body
   text-align: center
   @media(max-width: 800px)
     margin: 25px auto
+
+.link-wrapper
+  display: inline-block
+  width: 100%
+  &:before
+    display: none
+  &:after
+    display: none
