--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -14,6 +14,10 @@ h1
 		font-size: 5.2vw
 	@media(max-width: $lg-max-width)
 		font-size: 50px
+		line-height: 1.2
+	@media(max-width: 350px)
+		font-size: 30px
+		line-height: 1
 
 h2, .header-small-title
 	font-size: 80px
@@ -22,7 +26,11 @@ h2, .header-small-title
 	@media(max-width: 1980px)
 		font-size: 4.1vw
 	@media(max-width: $lg-max-width)
-		font-size: 40px
+		font-size: 35px
+		line-height: 1.3
+	@media(max-width: 350px)
+		font-size: 18px
+		line-height: 1
 
 h3
 	font-size: 70px
@@ -32,6 +40,8 @@ h3
 		font-size: 3.6vw
 	@media(max-width: $lg-max-width)
 		font-size: 35px
+	@media(max-width: 350px)
+		font-size: 15px
 
 h4
 	font-size: 40px
@@ -44,12 +54,14 @@ h4
 
 p
 	font-size: 24px
-	line-height: 1.1
+	line-height: 1
+	font-weight: 300
 	margin: 15px 0
 	@media(max-width: 1980px)
 		font-size: 1.25vw
 	@media(max-width: $lg-max-width)
 		font-size: 16px
+		line-height: 1.2
 
 hr
   border: solid $border-color
@@ -77,8 +89,8 @@ a
     bottom: -5px
     width: 0
     content: ""
-    height: 1px
-    background-color: $border-color
+    height: 2px
+    background-color: $white
     transition: width 0.3s ease-in-out
   &:hover, &:focus, &:active
     color: $link-color
@@ -114,7 +126,8 @@ button, .button-like-link
 		min-width: 16.3vw
 	@media(max-width: $lg-max-width)
 		font-size: 16px
-		width: 156px
+		width: auto
+		max-width: fit-content
 		padding: 9px 23px
 		border-radius: 23px
 	&:hover
@@ -135,6 +148,7 @@ button, .button-like-link
 	padding: 19px 47px
 	min-width: 313px
 	border: 2px solid $accent
+	width: auto
 	@media(max-width: 1980px)
 		border-radius: 2.4vw
 		font-size: 1.5vw
@@ -142,7 +156,8 @@ button, .button-like-link
 		min-width: 16.3vw
 	@media(max-width: $lg-max-width)
 		font-size: 16px
-		width: 156px
+		width: auto
+		max-width: fit-content
 		padding: 9px 23px
 		border: 1px solid $accent
 		border-radius: 23px
@@ -153,11 +168,20 @@ button, .button-like-link
 		@media(max-width: $lg-max-width)
 			border: 1px solid white
 
+.accent-btn_active
+	border: 2px solid white
+	background-color: transparent
+	color: $accent
+	@media(max-width: $lg-max-width)
+		border: 1px solid white
+
 .accent-reverse-btn
 	display: inline-block
 	background-color: $white
 	color: $accent
 	border: 2px solid $white
+	text-shadow: none
+	opacity: 0.9
 	@media(max-width: $lg-max-width)
 		border: 1px solid $white
 	&:hover, &:focus, &:active
@@ -186,11 +210,10 @@ button, .button-like-link
 	@media(max-width: $lg-max-width)
 		border: 1px solid white
 	&:hover, &:focus, &:active
-		border: 2px solid $accent
+		border: 2px solid white
 		background-color: white
 		color: $accent
-		@media(max-width: $lg-max-width)
-			border: 1px solid $accent
+		text-shadow: none
 
 .button-section
   background-color: black
@@ -245,22 +268,6 @@ button, .button-like-link
     left: 10px
   @media(max-width: $sm-max-width)
     left: 5px
-
-.slider
-  position: relative
-
-.slick-slide div
-  position: relative
-  max-height: fit-content
-  &:after
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-    background-color: rgba(0,0,0,.5)
-    content: ""
-    z-index: 7
 
 .slider-title
   position: absolute
