--- a/sass/layouts/_header.sass
+++ b/sass/layouts/_header.sass
@@ -117,6 +117,7 @@
   text-align: left
   background-color: white
   transition: all 0.3s ease-in-out
+  box-shadow: inset 0 0px 4px 0 rgba(0, 0, 0, 0.3),  0 3px 6px 0 rgba(0, 0, 0, 0.16)
   &:hover
     background-color: $accent
     a
