--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -15,7 +15,7 @@ h1
 	@media(max-width: $lg-max-width)
 		font-size: 50px
 		line-height: 1.2
-	@media(max-width: 350px), (max-height: 670px)
+	@media(max-width: 380px)
 		font-size: 30px
 		line-height: 1
 
@@ -28,7 +28,7 @@ h2, .header-small-title
 	@media(max-width: $lg-max-width)
 		font-size: 35px
 		line-height: 1.3
-	@media(max-width: 350px), (max-height: 670px)
+	@media(max-width: 380px)
 		font-size: 18px
 		line-height: 1
 
@@ -40,7 +40,7 @@ h3
 		font-size: 3.6vw
 	@media(max-width: $lg-max-width)
 		font-size: 35px
-	@media(max-width: 350px), (max-height: 670px)
+	@media(max-width: 380px)
 		font-size: 15px
 
 h4
